--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Endless Flyer"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:layout_marginBottom="20dp"/>
 
     <Button
